fix popover on multiple series

--- a/lib/xcharts.less
+++ b/lib/xcharts.less
@@ -6,9 +6,10 @@
   .fill {
     stroke-width: 0;
   }
+  .line .fill { pointer-events: none; }
   circle {
     stroke: #FFF;
-    stroke-width: 3px;
+    stroke-width: 1px;
   }
 
   .axis {
@@ -16,13 +17,13 @@
       fill: none;
     }
     .tick {
-      stroke: #EEE;
+      stroke: #F5F5F5;
       stroke-width: 1px;
     }
     text {
       font-family: Helvetica, Arial, Verdana, sans-serif;
       fill: #666;
-      font-size: 12px;
+      font-size: 10px;
     }
   }
 }
